# rmetis

./: .gitmodules  Cargo.toml  DEVELOPMENT_GUIDE.md  README.md  TECHNICAL_SPEC.md
benches/: partition.rs
src/: comm.rs  lib.rs  types.rs
src/coarsen/: mod.rs  rm.rs  shem.rs
src/ffi/: c_api.rs  mod.rs  wasm_api.rs
src/graph/: mod.rs  validate.rs
src/initial/: grow.rs  mod.rs  random.rs
src/partition/: kway.rs  mod.rs  nd.rs  recursive.rs
src/refine/: fm.rs  fm_kway.rs  greedy.rs  mod.rs
src/separator/: mod.rs
tests/: correctness.rs  parallel.rs
